# mahjong_server

./: CMakeLists.txt  install-deps-linux.sh  mahjong_server.sln
Debug/Win32/: tcp_server.ilk
Debug/Win32/cfg/: common_room_cfg.xml
Debug/x64/: libevent.lib
cpp_redis/: ReadMe.txt  cpp_redis.vcxproj  cpp_redis.vcxproj.filters
cpp_redis/Debug/cpp_redis.tlog/: cpp_redis.lastbuildstate
ipch/TCP_SERVER-fdac2a1f/: TCP_SERVER-ff1b0129.ipch
ipch/tcp_server-3f02dbc/: tcp_server-3b920f49.ipch
libevent/: ReadMe.txt  libevent.vcxproj  libevent.vcxproj.filters  stdafx.cpp
libevent/src/: buffer.c  evdns.c  evthread_pthread.c
tcp_server/: main.cpp  tcp_server.vcxproj  tcp_server.vcxproj.filters
tcp_server/Debug/: tcp_server.lastbuildstate  vc140.idb
tcp_server/Debug/tcp_server.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  tcp_server.lastbuildstate
tcp_server/cfg/: player_cfg.xml  room_cfg.xml
tcp_server/include/win32/libevent/event2/: bufferevent.h  util.h
tcp_server/lib/libevent/Debug/Win32/: libevent.lib
tcp_server/proto/: create_room_msg_protocol.proto  game_end_msg_protocol.proto  my_login_msg_protocol.proto  personal_head_portrait_msg_protocol.proto  play_card_msg_protocol.proto  player_cards_msg_protocol.proto  player_msg_protocol.proto  property_changed_msg_protocol.proto  room_list_msg_protocol.proto  room_msg_protocol.proto  room_operation_msg_protocol.proto  set_property_msg_protocol.proto  table_msg_protocol.proto  ting_card_msg_protocol.proto
tcp_server/src/customer/base/: common_typedef.h  special_typedef.h
tcp_server/src/customer/data/: config_manager.cc  config_manager.h  config_mgr.cc  config_mgr.h  data_manager.cc  data_manager.h
tcp_server/src/customer/msg/: msg.h  msg_code.h  msg_id.h  msg_manager.cc  msg_manager.h  msg_type.h  property_id.h
tcp_server/src/customer/msg/protocol/: create_room_msg_protocol.pb.cc  create_room_msg_protocol.pb.h  game_end_msg_protocol.pb.cc  game_end_msg_protocol.pb.h  game_start_msg_protocol.pb.cc  game_start_msg_protocol.pb.h  my_login_msg_protocol.pb.cc  my_login_msg_protocol.pb.h  personal_head_portrait_msg_protocol.pb.cc  personal_head_portrait_msg_protocol.pb.h  personal_info_msg_protocol.pb.cc  personal_info_msg_protocol.pb.h  play_card_msg_protocol.pb.cc  play_card_msg_protocol.pb.h  player_cards_msg_protocol.pb.cc  player_cards_msg_protocol.pb.h  player_msg_protocol.pb.cc  player_msg_protocol.pb.h  property_changed_msg_protocol.pb.cc  property_changed_msg_protocol.pb.h  room_list_msg_protocol.pb.cc  room_list_msg_protocol.pb.h  room_msg_protocol.pb.cc  room_msg_protocol.pb.h  room_operation_msg_protocol.pb.cc  room_operation_msg_protocol.pb.h  set_property_msg_protocol.pb.cc  set_property_msg_protocol.pb.h  table_msg_protocol.pb.cc  table_msg_protocol.pb.h  ting_card_msg_protocol.pb.cc  ting_card_msg_protocol.pb.h
tcp_server/src/customer/msg/protocol-old/: my_login_msg_protocol.pb.cc  my_login_msg_protocol.pb.h  personal_head_portrait_msg_protocol.pb.cc  play_card_msg_protocol.pb.h  player_cards_msg_protocol.pb.cc  player_cards_msg_protocol.pb.h  player_msg_protocol.pb.cc  player_msg_protocol.pb.h  property_changed_msg_protocol.pb.cc  room_msg_protocol.pb.h  set_property_msg_protocol.pb.h  table_msg_protocol.pb.cc  table_msg_protocol.pb.h  ting_card_msg_protocol.pb.h
tcp_server/src/customer/player/: player.cc  player.h  player_constants.h  player_manager.cc  player_manager.h  player_protocol.h  robot.cc  robot.h
tcp_server/src/customer/room/: card_constants.h  room.cc  room.h  room_constants.h  room_manager.cc  room_manager.h  room_protocol.h  table.h  table_protocol.h
tcp_server/src/customer/test/: test_chess_card_algorithm.h  test_shuffle_algorithm.h
tcp_server/src/customer/util/: util.h
tcp_server/src/framework/algorithm/: chess_card_algorithm.cc  chess_card_algorithm.h
tcp_server/src/framework/base/: basic_manager.h  common.h  log_headers.h  macros.h  msg.h  typedef.h
tcp_server/src/framework/cache/: cache_manager.cc  cache_manager.h  cache_proxy.cc  cache_proxy.h
tcp_server/src/framework/event/: command.cc  command.h  command_listener.cc  command_listener.h  command_manager.cc  command_manager.h  event.cc  event.h  event_define.h  event_listener.cc  event_listener.h  event_manager.cc  event_manager.h  listener.cc  listener.h
tcp_server/src/framework/log/: log.cc  log.h  mylog.cc  mylog.h
tcp_server/src/framework/network/: network_event_id.h  network_manager.cc  network_manager.h
tcp_server/src/framework/network/google-old/protobuf/io/: gzip_stream.cc  zero_copy_stream_impl.cc
tcp_server/src/framework/network/google/protobuf/: config.h  generated_message_reflection.cc  generated_message_util.cc  generated_message_util.h
tcp_server/src/framework/network/google/protobuf/io/: gzip_stream.cc  gzip_stream.h  zconf.h  zero_copy_stream_impl.cc
tcp_server/src/framework/network/google/protobuf/stubs/: common.cc  hash.h
tcp_server/src/framework/network/google/protobuf/win-specific/zlib/include/: zconf.h
tcp_server/src/framework/network/msg/: msg.h  msg_id.h  msg_manager.cc  msg_manager.h  msg_type.h
tcp_server/src/framework/network/msg/protocol/: my_login_msg_protocol.pb.cc  my_login_msg_protocol.pb.h
tcp_server/src/framework/network/protocol/: login_msg_protocol.pb.cc  login_msg_protocol.pb.h
tcp_server/src/framework/service/runtime/: server.cc  server.h  server_protocal.h
tcp_server/src/framework/util/: algorithm.h  chess_card_algorithm.cc  chess_card_algorithm.h  myutil.h  util.h
tcp_server/src/framework/util/google/absl/base/internal/: low_level_alloc.cc  sysinfo.cc
tcp_server/src/framework/util/google/absl/numeric/: int128.cc
tcp_server/src/framework/util/tinyxml/: tinyxml2.h
tcp_server/tool/protoc/: protoc.bat  readme.txt
tcp_server/tool/tolua-bat/: tolua_command_listener.bat  tolua_command_manager.bat  tolua_event.bat  tolua_event_define.bat  tolua_event_listener.bat  tolua_event_manager.bat  tolua_scene_manager.bat
